--- a/OnkyoKit.xcodeproj/xcshareddata/xcschemes/OnkyoKit Mac Network Tests.xcscheme
+++ b/OnkyoKit.xcodeproj/xcshareddata/xcschemes/OnkyoKit Mac Network Tests.xcscheme
@@ -5,41 +5,15 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1FBB18C9175BB1AE00E7B9C7"
-               BuildableName = "OnkyoKit.framework"
-               BlueprintName = "OnkyoKit Mac"
-               ReferencedContainer = "container:OnkyoKit.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
    </BuildAction>
    <TestAction
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldUseLaunchSchemeArgsEnv = "NO"
       buildConfiguration = "Debug">
       <Testables>
          <TestableReference
             skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1FE378EF175EC6D800971013"
-               BuildableName = "OnkyoKit Mac Tests.xctest"
-               BlueprintName = "OnkyoKit Mac Tests"
-               ReferencedContainer = "container:OnkyoKit.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1F2318431768A9CC0025FA12"
@@ -49,6 +23,13 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "ONK_ADDRESS"
+            value = "192.168.1.69"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </TestAction>
    <LaunchAction
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
