--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
-[submodule "External/specta"]
-	path = External/specta
-	url = git://github.com/github/specta.git
-[submodule "External/expecta"]
-	path = External/expecta
-	url = git://github.com/github/expecta.git
 [submodule "External/ocmock"]
 	path = External/ocmock
-	url = git://github.com/erikdoe/ocmock.git
+	url = https://github.com/erikdoe/ocmock.git
+[submodule "External/xcconfigs"]
+	path = External/xcconfigs
+	url = https://github.com/jspahrsummers/xcconfigs.git
