--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ profile
 *.moved-aside
 DerivedData
 .idea/
+Tests/Pods
+Tests/Podfile.lock
+Tests/OnkyoKit Tests.xcodeproj/xcshareddata/xcschemes/
